<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="weblink">www.udacity.com</string>
    <string name="phonenumber">650–555–5555</string>
    <string name="address">Udacity 2465 Latham St Mountain View CA 94043</string>
    <string name="imagedescription_logo">Udacity Logo</string>
    <string name="imagedescription_background">Background dipicting people communicating ideas</string>

    <color name="udacitygrey">#2c3c49</color>
</resources>
